WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194122
Capture state should be managed consistently when doing process swapping
https://bugs.webkit.org/show_bug.cgi?id=194122
Summary
Capture state should be managed consistently when doing process swapping
youenn fablet
Reported
2019-01-31 16:30:42 PST
Capture state should be kept consistently when doing process swapping
Attachments
Patch
(12.06 KB, patch)
2019-01-31 16:40 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(32.01 KB, patch)
2019-02-01 11:08 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(19.91 KB, patch)
2019-02-01 11:17 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(17.63 KB, patch)
2019-02-01 12:58 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(18.71 KB, patch)
2019-02-01 13:30 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(16.57 KB, patch)
2019-02-01 14:12 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(16.56 KB, patch)
2019-02-01 14:13 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(16.61 KB, patch)
2019-02-01 14:44 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-01-31 16:30:57 PST
<
rdar://problem/47609293
>
youenn fablet
Comment 2
2019-01-31 16:40:48 PST
Created
attachment 360804
[details]
Patch
youenn fablet
Comment 3
2019-02-01 11:08:40 PST
Created
attachment 360874
[details]
Patch
EWS Watchlist
Comment 4
2019-02-01 11:12:21 PST
Attachment 360874
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4700: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4708: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 21 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 5
2019-02-01 11:17:38 PST
Created
attachment 360875
[details]
Patch
EWS Watchlist
Comment 6
2019-02-01 11:19:39 PST
Attachment 360875
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4700: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4708: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 18 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 7
2019-02-01 12:58:52 PST
Created
attachment 360885
[details]
Patch
EWS Watchlist
Comment 8
2019-02-01 13:00:33 PST
Attachment 360885
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4700: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4708: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 9
2019-02-01 13:30:13 PST
Created
attachment 360891
[details]
Patch
EWS Watchlist
Comment 10
2019-02-01 13:32:38 PST
Attachment 360891
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4700: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4708: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 11
2019-02-01 14:12:45 PST
Created
attachment 360895
[details]
Patch
youenn fablet
Comment 12
2019-02-01 14:13:52 PST
Created
attachment 360896
[details]
Patch
EWS Watchlist
Comment 13
2019-02-01 14:15:55 PST
Attachment 360896
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4700: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4708: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 14
2019-02-01 14:44:17 PST
Created
attachment 360906
[details]
Patch
EWS Watchlist
Comment 15
2019-02-01 14:47:14 PST
Attachment 360906
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4700: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4708: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 16
2019-02-04 09:37:07 PST
Comment on
attachment 360906
[details]
Patch Clearing flags on attachment: 360906 Committed
r240928
: <
https://trac.webkit.org/changeset/240928
>
WebKit Commit Bot
Comment 17
2019-02-04 09:37:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug