Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm
@@ -414,4 +414,13 @@ bool TestController::canDoServerTrustEvaluationInNetworkProcess() const
 #endif
 }
 
+bool TestController::isDoingMediaCapture() const
+{
+#if WK_API_ENABLED
+    return m_mainWebView->platformView()._mediaCaptureState != _WKMediaCaptureStateNone;
+#else
+    return false;
+#endif
+}
+
 } // namespace WTR
